--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -201,6 +201,15 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
@@ -222,15 +231,7 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=Behavior Tree
-RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/_Core/_Enemies/Creature/Enemy_Creature_Attack.Enemy_Creature_Attack
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -245,7 +246,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Level/_LevelAssets/_Props/_Furniture
+ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Creature
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -267,45 +268,72 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/_Level/_LevelAssets/_Props/_Furniture
+ContentBrowserTab1.SelectedPaths=/Game/_Core/_Enemies/Creature
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
+SequenceBrowser.ThumbnailSize=2
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Source Frame Rate
+SequenceBrowser.HiddenColumns=Number of Frames
+SequenceBrowser.HiddenColumns=Number of Keys
+SequenceBrowser.HiddenColumns=AnimSyncMarkerList
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=Target Frame Rate
+SequenceBrowser.HiddenColumns=ImportFileFramerate
+SequenceBrowser.HiddenColumns=ImportResampleFramerate
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=RetargetSourceAsset
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=bUseNormalizedRootMotionScale
+SequenceBrowser.HiddenColumns=TargetFrameRate
+SequenceBrowser.HiddenColumns=PlatformTargetFrameRate
+SequenceBrowser.HiddenColumns=NumberOfSampledKeys
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=HasParentAsset
+SequenceBrowser.HiddenColumns=AnimNotifyList
+SequenceBrowser.HiddenColumns=CurveNameList
+SequenceBrowser.HiddenColumns=Class
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Level/_LevelAssets/_Props/_Materials/Stove_Mat
-MRUItem1=/Game/_Level/_LevelAssets/_Props/_Materials/Bottom_Counter_Mat
-MRUItem2=/Game/_Level/_LevelAssets/_Props/_Furniture/Stove_Counter
-MRUItem3=/Game/_Level/_LevelAssets/_Props/_Materials/diner_chair_and_table
-MRUItem4=/Game/_Level/_LevelAssets/_Props/_Furniture/Diner_Chair_SM
-MRUItem5=/Game/_Level/_LevelAssets/_Props/_Furniture/Countertop
-MRUItem6=/Game/_Level/_LevelAssets/_Props/_Materials/Wall_Plaster_Texture
-MRUItem7=/Game/_Level/_LevelAssets/_Props/_Materials/Wall_Plaster_Mat
-MRUItem8=/Game/_Level/_LevelAssets/_Props/_Materials/Countertop_Marble_Mat
-MRUItem9=/Game/_Level/_LevelAssets/_OGFiles/DustyWood_M
-MRUItem10=/Game/_Level/_LevelAssets/_OGFiles/skin_nasty_2_BaseColor
-MRUItem11=/Game/_Level/_LevelAssets/_OGFiles/marble_2_tiling-ish
-MRUItem12=/Game/_Level/_LevelAssets/_OGFiles/white_wall_BaseColor
-MRUItem13=/Game/_Level/_LevelAssets/_OGFiles/marble_2_tiling-ish_Mat
-MRUItem14=/Game/_Level/_LevelAssets/_Props/_Materials/Counter_Sink_Mat
-MRUItem15=/Game/_Level/_LevelAssets/_Props/_Materials/cardboardBox_M
-MRUItem16=/Game/_Level/_LevelAssets/_Props/_Outside/cardboardBox_SM
-MRUItem17=/Game/_Level/_LevelAssets/_Props/_Materials/TrashCan_Texture_Mat
-MRUItem18=/Game/_Level/_LevelAssets/_Props/_Outside/Trashcan
-MRUItem19=/Game/_Level/_LevelAssets/_Props/_Materials/Tree_M
-MRUItem20=/Game/_Level/_LevelAssets/_Props/_Outside/Tree_SM
-MRUItem21=/Game/_Level/_LevelAssets/_Environment_Assets/kitchen_counter/counter
-MRUItem22=/Game/_Level/_LevelAssets/_Props/Bodies/Arm_Part
-MRUItem23=/Game/_Core/_Player/IF_Character
-MRUItem24=/Game/_Core/_Player/DI_Player
-MRUItem25=/Game/_Level/_LevelAssets/_Environment_Assets/Ferry/ferry
-MRUItem26=/Game/_Level/_LevelAssets/_Environment_Assets/Ferry/Ferry_BP
-MRUItem27=/Game/_Core/_Enemies/_Charger/Brain/task/BTTASK_ROAM
-MRUItem28=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Enemy
-MRUItem29=/Game/_Core/_Enemies/_AiSystems/_Brain/Enemy_CTR_Main
+MRUItem0=/Game/_Core/_Enemies/Creature/Enemy_Creature_IdleNoTents
+MRUItem1=/Game/_Core/_Enemies/Creature/Enemy_Creature_TentSpawn
+MRUItem2=/Game/_Core/_Enemies/Creature/Enemy_Creature_Idle
+MRUItem3=/Game/_Core/_Enemies/Creature/Enemy_Creature_Attack
+MRUItem4=/Game/_Core/_Enemies/Creature/Enemy_Creature
+MRUItem5=/Game/_Core/_Enemies/Creature/Creature_Alpha
+MRUItem6=/Game/_Core/_Enemies/Creature/Creature_DM
+MRUItem7=/Game/_Core/_Enemies/Creature/Creature
+MRUItem8=/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk_Mouth
+MRUItem9=/Game/_Level/_LevelAssets/_Props/_Materials/Stove_Mat
+MRUItem10=/Game/_Level/_LevelAssets/_Props/_Materials/Bottom_Counter_Mat
+MRUItem11=/Game/_Level/_LevelAssets/_Props/_Furniture/Stove_Counter
+MRUItem12=/Game/_Level/_LevelAssets/_Props/_Materials/diner_chair_and_table
+MRUItem13=/Game/_Level/_LevelAssets/_Props/_Furniture/Diner_Chair_SM
+MRUItem14=/Game/_Level/_LevelAssets/_Props/_Furniture/Countertop
+MRUItem15=/Game/_Level/_LevelAssets/_Props/_Materials/Wall_Plaster_Texture
+MRUItem16=/Game/_Level/_LevelAssets/_Props/_Materials/Wall_Plaster_Mat
+MRUItem17=/Game/_Level/_LevelAssets/_Props/_Materials/Countertop_Marble_Mat
+MRUItem18=/Game/_Level/_LevelAssets/_OGFiles/DustyWood_M
+MRUItem19=/Game/_Level/_LevelAssets/_OGFiles/skin_nasty_2_BaseColor
+MRUItem20=/Game/_Level/_LevelAssets/_OGFiles/marble_2_tiling-ish
+MRUItem21=/Game/_Level/_LevelAssets/_OGFiles/white_wall_BaseColor
+MRUItem22=/Game/_Level/_LevelAssets/_OGFiles/marble_2_tiling-ish_Mat
+MRUItem23=/Game/_Level/_LevelAssets/_Props/_Materials/Counter_Sink_Mat
+MRUItem24=/Game/_Level/_LevelAssets/_Props/_Materials/cardboardBox_M
+MRUItem25=/Game/_Level/_LevelAssets/_Props/_Outside/cardboardBox_SM
+MRUItem26=/Game/_Level/_LevelAssets/_Props/_Materials/TrashCan_Texture_Mat
+MRUItem27=/Game/_Level/_LevelAssets/_Props/_Outside/Trashcan
+MRUItem28=/Game/_Level/_LevelAssets/_Props/_Materials/Tree_M
+MRUItem29=/Game/_Level/_LevelAssets/_Props/_Outside/Tree_SM
 
 [DetailCategories]
 DI_Player_C.TransformCommon=True
@@ -1108,7 +1136,7 @@ MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
 MaterialExpressionTextureSample.MaterialExpression=True
 Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
-Texture2D.Interchange =True
+Texture2D.Interchange=True
 Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
@@ -1122,6 +1150,30 @@ BP_Door_C.Physics=True
 BP_Door_C.Networking=True
 BP_Door_C.Input=True
 BP_Door_C.Actor=True
+FbxImportUI.Animation=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LODSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.AnimationRig=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.Physics=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.SkinWeights=True
+SkeletalMesh.Animation=True
+SkeletalMesh.RayTracing=True
+SkeletalMesh.Sampling=True
+SkeletalMesh.Deformer=True
+SkeletalMesh.Rendering=True
+Texture2D.Interchange =True
+PersonaPreviewSceneDescription.Animation=True
+PersonaPreviewSceneDescription.Mesh=True
+PersonaPreviewSceneDescription.Physics=True
+PersonaPreviewSceneDescription.Additional Meshes=True
+AssetViewerSettings.Settings=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/_Level/_LevelAssets/_Props/_Furniture/Stove_Counter.Stove_Counter;
@@ -1192,6 +1244,12 @@ DeleteConfirmationVariable_Warning=False
 /Game/_Level/_LevelAssets/_OGFiles/Countertop_Marble_Mat.Countertop_Marble_Mat=1
 /Game/_Level/_LevelAssets/_OGFiles/DustyWood_M.DustyWood_M=1
 /Game/_Level/_LevelAssets/_Props/_Materials/Bottom_Counter_Mat.Bottom_Counter_Mat=1
+/Game/_Core/_Enemies/Creature/Creature_Alpha.Creature_Alpha=1
+/Game/_Core/_Enemies/Creature/Creature_DM.Creature_DM=1
+/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk_Mouth.Kronen_Bulk_Mouth=1
+/Game/_Core/_Enemies/Creature/Creature.Creature=1
+/Game/_Core/_Enemies/Creature/Enemy_Creature.Enemy_Creature=1
+/Game/_Core/_Enemies/Creature/Enemy_Creature_Attack.Enemy_Creature_Attack=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1245,8 +1303,8 @@ GraphEditorQuickJumps=()
 
 [DetailPropertyExpansion]
 InputAction=
-DataAsset=
-Object=
+DataAsset="\"Object.SkeletalMeshes\" "
+Object="\"Object.SkeletalMeshes\" "
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[22]\" \"Object.Mappings.Mappings.Mappings[22].Modifiers\" \"Object.Mappings.Mappings.Mappings[22].Modifiers.Modifiers[0]\" \"Object.Mappings.Mappings.Mappings[23]\" \"Object.Mappings.Mappings.Mappings[23].Modifiers\" \"Object.Mappings.Mappings.Mappings[23].Modifiers.Modifiers[0]\" \"Object.Mappings.Mappings.Mappings[24]\" \"Object.Mappings.Mappings.Mappings[24].Modifiers\" \"Object.Mappings.Mappings.Mappings[24].Modifiers.Modifiers[0]\" \"Object.Mappings.Mappings.Mappings[25]\" \"Object.Mappings.Mappings.Mappings[25].Modifiers\" \"Object.Mappings.Mappings.Mappings[25].Modifiers.Modifiers[0]\" \"Object.Mappings.Mappings.Mappings[26]\" \"Object.Mappings.Mappings.Mappings[26].Modifiers\" \"Object.Mappings.Mappings.Mappings[26].Modifiers.Modifiers[0]\" "
 CharacterMovementComponent="\"Object.Character Movement: Gravity.GravityDirection\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" \"Object.PlanarMovement.PlaneConstraintNormal\" \"Object.PlanarMovement.PlaneConstraintOrigin\" "
 PawnMovementComponent="\"Object.Character Movement: Gravity.GravityDirection\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" \"Object.PlanarMovement.PlaneConstraintNormal\" \"Object.PlanarMovement.PlaneConstraintOrigin\" "
@@ -1264,6 +1322,7 @@ StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyIn
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMesh=
 StreamableRenderAsset=
+PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 
 [DetailCategoriesAdvanced]
 InputAction.Action=True
@@ -2377,9 +2436,18 @@ HierarchicalLODUtilities.TimeStamp=2024.03.19-20.53.36
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2024.03.19-20.53.39
 TextureEditor.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2024.02.29-23.20.29
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2024.02.29-23.20.28
+PinnedCommandList.LastCompileMethod=Unknown
+AnimationEditor.TimeStamp=2024.02.29-23.20.22
+AnimationEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2024.02.29-23.20.29
+SequencerWidgets.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
@@ -2390,6 +2458,7 @@ PreserveScaleRatio=True
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
+bShowGrid=False
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
@@ -2582,7 +2651,7 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
-bImportAnimations=False
+bImportAnimations=True
 bImportMaterials=True
 bImportTextures=True
 
@@ -2685,4 +2754,52 @@ bConvertSceneUnit=False
 
 [MessageLog]
 LastLogListing=FBXImport
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bAlwaysOpenAnimationAssetsInNewTab=False
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+DefaultBoneColor=(R=0.000000,G=0.000000,B=0.025000,A=1.000000)
+SelectedBoneColor=(R=0.200000,G=1.000000,B=0.200000,A=1.000000)
+AffectedBoneColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000)
+DisabledBoneColor=(R=0.400000,G=0.400000,B=0.400000,A=1.000000)
+ParentOfSelectedBoneColor=(R=0.850000,G=0.450000,B=0.120000,A=1.000000)
+VirtualBoneColor=(R=0.400000,G=0.400000,B=1.000000,A=1.000000)
+SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
+NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bPauseAnimationOnCameraMove=False
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bExpandTreeOnSelection=True
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=5,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=5,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+CurveEditorSnapInterval=0.010000
+TimelineScrubSnapValue=1000
+TimelineDisplayFormat=Frames
+bTimelineDisplayPercentage=True
+bTimelineDisplayFormatSecondary=True
+bTimelineDisplayCurveKeys=False
+TimelineEnabledSnaps=CompositeSegment
+TimelineEnabledSnaps=MontageSection
+bAllowIncompatibleSkeletonSelection=False
+bUseTreeViewForAnimationCurves=False
+AnimationCurveGroupingDelimiters="._/|\\"
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+Contexts=(Name="SkeletalMeshEditor",Commands=)
+Contexts=(Name="AnimationEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationEditor",Commands=)
 
