--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -202,7 +202,7 @@ BP_Door_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappin
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
@@ -270,7 +270,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/_Level/_LevelAssets/_Props/_Furniture
+ContentBrowserTab1.SelectedPaths=/Game/_Level/_LevelAssets/_Environment_Assets/Stairs
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -1395,7 +1395,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/EmperorMinilla/Desktop/Deep Infection/The_Influence/DeepInfection/Content/_Level
+UNR=../../../../Projects/The_Influence/DeepInfection/Content/_Level
 BRUSH=../../../../Projects/The_Influence/DeepInfection/Content/
 FBX=../../../../Projects/The_Influence/DeepInfection/Content/
 FBXAnim=../../../../Projects/The_Influence/DeepInfection/Content/
@@ -2492,9 +2492,9 @@ SequencerWidgets.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -2798,7 +2798,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=EditorErrors
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
