--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -174,7 +174,7 @@ MRUItem0=/Game/_Level/Island
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 InputAction=
 K2Node_VariableGet=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
-DI_Player_C=
+DI_Player_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 SkeletalMeshComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 BP_KronenFemale_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 BP_KronenFast_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
@@ -222,12 +222,13 @@ key1_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.
 key1_2_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 Bandige_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 Medkit_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
+Invetory_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 
 [EditorStartup]
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -238,6 +239,9 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
@@ -256,12 +260,15 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/_Core/_Player/IF_Character.IF_Character
-OpenAssetsAtExit=/Game/_Core/_Player/_INV_System/_Items/keys/key1_2.key1_2
 OpenAssetsAtExit=/Game/_Core/_Player/_INV_System/_Items/keys/Master_Key.Master_Key
+OpenAssetsAtExit=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Bandige.Bandige
+OpenAssetsAtExit=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Medkit.Medkit
+OpenAssetsAtExit=/Game/_Core/_Player/_INV_System/_Items/keys/key1_2.key1_2
+OpenAssetsAtExit=/Game/_Core/_Player/_INV_System/_Items/keys/key1.key1
+OpenAssetsAtExit=/Game/_Core/_Player/IF_Character.IF_Character
+OpenAssetsAtExit=/Game/_Core/_Player/DI_Player.DI_Player
+OpenAssetsAtExit=/Game/_Core/_Player/_INV_System/Invetory.Invetory
+OpenAssetsAtExit=/Game/_PlaceHolderts/BP_DoorLocket_2.BP_DoorLocket_2
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -336,36 +343,36 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Player/IF_Character
-MRUItem1=/Game/_Core/_Player/_INV_System/_Items/keys/key1_2
-MRUItem2=/Game/_Core/_Player/_INV_System/_Items/keys/Master_Key
-MRUItem3=/Game/_PlaceHolderts/BP_DoorLocket_2
-MRUItem4=/Game/_Level/_LevelAssets/_Environment_Assets/Door/BP_DoorLocket
-MRUItem5=/Game/_Level/_LevelAssets/_Environment_Assets/InteractionSyst/Interact_IF
-MRUItem6=/Game/_Core/Libraries/BP_FunctionLib
-MRUItem7=/Game/_Level/_LevelAssets/_Environment_Assets/Door/BP_Door
-MRUItem8=/Game/_Core/_Player/DI_Player
-MRUItem9=/Game/_Level/_LevelAssets/_Props/_Furniture/Carpet3
-MRUItem10=/Game/_Level/_LevelAssets/_Props/_Furniture/Carpet2
-MRUItem11=/Game/_Level/_LevelAssets/_Props/_Furniture/Towel1
-MRUItem12=/Game/_Level/_LevelAssets/_Props/_Furniture/Vase1
-MRUItem13=/Game/_Level/_LevelAssets/_Props/_Outside/Carpet3_M
-MRUItem14=/Game/_Level/_LevelAssets/_Props/_Outside/Carpet2_M
-MRUItem15=/Game/_Level/_LevelAssets/_Props/_Materials/Towel_Mat
-MRUItem16=/Game/_Level/_LevelAssets/_Props/_Materials/Vase1_Mat
-MRUItem17=/Game/_Level/_LevelAssets/_Props/_Materials/Bench_M
-MRUItem18=/Game/_Level/_LevelAssets/_Props/_Furniture/Bench_SM
-MRUItem19=/Game/_Level/_LevelAssets/_Props/_Furniture/Carpet_SM
-MRUItem20=/Game/_Core/_Weapons/AmmoToSpawn/NewAmmo/BP_SG_Projectile
-MRUItem21=/Game/_Core/_Weapons/AmmoToSpawn/BullitAr
-MRUItem22=/Game/_Core/_Enemies/BP_Kronen
-MRUItem23=/Game/_Core/BPInterfaces/BPI_GetDamage
-MRUItem24=/Game/_Core/_Weapons/AmmoToSpawn/NewAmmo/TraceColler
-MRUItem25=/Game/_Core/_Weapons/AmmoToSpawn/NewAmmo/BP_PistolProjectile
-MRUItem26=/Game/_Level/_LevelAssets/_Props/_Furniture/Media_Center
-MRUItem27=/Game/_Level/_LevelAssets/_Props/_Materials/Playground_2
-MRUItem28=/Game/_Level/_LevelAssets/_Props/_Outside/Playground_SM
-MRUItem29=/Game/_Level/_LevelAssets/_Props/_Materials/Media_Center_Stuff1_Mat
+MRUItem0=/Game/_PlaceHolderts/BP_DoorLocket_2
+MRUItem1=/Game/_Core/_Player/_INV_System/Invetory
+MRUItem2=/Game/_Core/_Player/DI_Player
+MRUItem3=/Game/_Core/_Player/IF_Character
+MRUItem4=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Medkit
+MRUItem5=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Bandige
+MRUItem6=/Game/_Core/_Player/_INV_System/_Items/keys/Master_Key
+MRUItem7=/Game/_Core/_Player/_INV_System/_Items/keys/key1_2
+MRUItem8=/Game/_Level/_LevelAssets/_Environment_Assets/Door/BP_DoorLocket
+MRUItem9=/Game/_Level/_LevelAssets/_Environment_Assets/InteractionSyst/Interact_IF
+MRUItem10=/Game/_Core/Libraries/BP_FunctionLib
+MRUItem11=/Game/_Level/_LevelAssets/_Environment_Assets/Door/BP_Door
+MRUItem12=/Game/_Level/_LevelAssets/_Props/_Furniture/Carpet3
+MRUItem13=/Game/_Level/_LevelAssets/_Props/_Furniture/Carpet2
+MRUItem14=/Game/_Level/_LevelAssets/_Props/_Furniture/Towel1
+MRUItem15=/Game/_Level/_LevelAssets/_Props/_Furniture/Vase1
+MRUItem16=/Game/_Level/_LevelAssets/_Props/_Outside/Carpet3_M
+MRUItem17=/Game/_Level/_LevelAssets/_Props/_Outside/Carpet2_M
+MRUItem18=/Game/_Level/_LevelAssets/_Props/_Materials/Towel_Mat
+MRUItem19=/Game/_Level/_LevelAssets/_Props/_Materials/Vase1_Mat
+MRUItem20=/Game/_Level/_LevelAssets/_Props/_Materials/Bench_M
+MRUItem21=/Game/_Level/_LevelAssets/_Props/_Furniture/Bench_SM
+MRUItem22=/Game/_Level/_LevelAssets/_Props/_Furniture/Carpet_SM
+MRUItem23=/Game/_Core/_Weapons/AmmoToSpawn/NewAmmo/BP_SG_Projectile
+MRUItem24=/Game/_Core/_Weapons/AmmoToSpawn/BullitAr
+MRUItem25=/Game/_Core/_Enemies/BP_Kronen
+MRUItem26=/Game/_Core/BPInterfaces/BPI_GetDamage
+MRUItem27=/Game/_Core/_Weapons/AmmoToSpawn/NewAmmo/TraceColler
+MRUItem28=/Game/_Core/_Weapons/AmmoToSpawn/NewAmmo/BP_PistolProjectile
+MRUItem29=/Game/_Level/_LevelAssets/_Props/_Furniture/Media_Center
 
 [DetailCategories]
 DI_Player_C.TransformCommon=True
@@ -375,6 +382,7 @@ DI_Player_C.Tick=True
 DI_Player_C.Widgets=True
 DI_Player_C.ComponentTick=True
 DI_Player_C.Player Variables=True
+DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
@@ -1336,7 +1344,6 @@ BP_SG_Projectile_C.HLOD=True
 BP_SG_Projectile_C.Physics=True
 BP_SG_Projectile_C.WorldPartition=True
 BP_SG_Projectile_C.Events=True
-DI_Player_C.Weapon Info =True
 BoxComponent.TransformCommon=True
 BoxComponent.Shape=True
 BoxComponent.Navigation=True
@@ -1432,6 +1439,19 @@ Medkit_C.Physics=True
 Medkit_C.Networking=True
 Medkit_C.Input=True
 Medkit_C.Actor=True
+Bandige_C.Default=True
+Bandige_C.Tick=True
+Bandige_C.WorldPartition=True
+Bandige_C.Events=True
+Medkit_C.Default=True
+Medkit_C.Tick=True
+Medkit_C.WorldPartition=True
+Medkit_C.Events=True
+key1_C.Default=True
+key1_C.Tick=True
+key1_C.WorldPartition=True
+key1_C.Events=True
+DI_Player_C.Weapon Info =True
 
 [PlacementMode]
 RecentlyPlaced=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Medkit.Medkit;
@@ -1617,8 +1637,8 @@ MovementComponent="\"Object.Velocity.Velocity\" \"Object.PlanarMovement.PlaneCon
 ActorComponent=
 SkeletalMeshComponent=
 SkinnedMeshComponent=
-MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent=
+PrimitiveComponent=
 SceneComponent=
 CapsuleComponent=
 ShapeComponent=
