--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -174,7 +174,7 @@ MRUItem0=/Game/_Level/Island
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 InputAction=
 K2Node_VariableGet=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
-DI_Player_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
+DI_Player_C=
 SkeletalMeshComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 BP_KronenFemale_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 BP_KronenFast_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
@@ -191,7 +191,7 @@ SceneComponent=
 Ferry_BP_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Collision.Collision
 PlayerStart=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup
-IF_Character_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
+IF_Character_C=
 K2Node_InputKey=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings
 MeshNaniteSettings=
@@ -228,7 +228,7 @@ Invetory_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappi
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -260,15 +260,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/_Core/_Player/_INV_System/_Items/keys/Master_Key.Master_Key
-OpenAssetsAtExit=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Bandige.Bandige
-OpenAssetsAtExit=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Medkit.Medkit
-OpenAssetsAtExit=/Game/_Core/_Player/_INV_System/_Items/keys/key1_2.key1_2
-OpenAssetsAtExit=/Game/_Core/_Player/_INV_System/_Items/keys/key1.key1
-OpenAssetsAtExit=/Game/_Core/_Player/IF_Character.IF_Character
-OpenAssetsAtExit=/Game/_Core/_Player/DI_Player.DI_Player
-OpenAssetsAtExit=/Game/_Core/_Player/_INV_System/Invetory.Invetory
-OpenAssetsAtExit=/Game/_PlaceHolderts/BP_DoorLocket_2.BP_DoorLocket_2
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -305,7 +296,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.535812318
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/_Core/_Player
+ContentBrowserTab1.SelectedPaths=
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -1574,6 +1565,10 @@ DeleteConfirmationVariable_Warning=False
 /Game/_PlaceHolderts/BP_DoorLocket_2.BP_DoorLocket_2=1
 /Game/_Core/_Player/_INV_System/_Items/keys/key1_2.key1_2=1
 /Game/_Core/_Player/_INV_System/_Items/keys/Master_Key.Master_Key=1
+/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Bandige.Bandige=1
+/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Medkit.Medkit=1
+/Game/_Core/_Player/_INV_System/_Items/keys/key1.key1=1
+/Game/_Core/_Player/_INV_System/Invetory.Invetory=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
